--- a/frontend/index.html
+++ b/frontend/index.html
@@ -183,7 +183,7 @@
     <p>Todos os direitos reservados.</p>
   </footer>
 
-  <script type="module" src="./script.js"></script>
+  <script src="../main.js/main.js"></script>
 </body>
 </html>
 
